--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class=container>
+        <h2 class="hexColor">this hex color code is :  <br><span class="hex"></span></br> </h2>
+    
     <button type="button" class="colorBtn">Press here to change color</button>
+    </div>
     
     <script src="script.js"></script>
 </body>
